--- a/db-credentials-secret.yaml
+++ b/db-credentials-secret.yaml
@@ -4,5 +4,5 @@ kind: Secret
 metadata:
   name: db-credentials # Name of the 'Secret'
 data:
-  username: dXNlcg==  # base64 encoded 'Secret' username
+  username: devops  # base64 encoded 'Secret' username
   password: Welcome@123 # base64 encoded 'Secret' password
